named my home page

--- a/index.htm
+++ b/index.htm
@@ -3,7 +3,7 @@
 
 <head>
     <base href=".">
-    <title>Student Name's website</title>
+    <title>Bailey's website</title>
 
     <meta charset="utf-8">
     <meta name="keywords" content="high school, math, computer science, physics, Processing, Scratch">
