changed link to have username

--- a/import/include.htm
+++ b/import/include.htm
@@ -5,7 +5,7 @@
         <li>
             <a href="index.htm">links</a>
             <ul>
-                <li><a href="https://github.com/student-username?tab=repositories">GitHub</a>
+                <li><a href="https://github.com/minjaman?tab=repositories">GitHub</a>
                 </li>
                 <li><a href="#">Scratch</a>
                 </li>
