--- a/index.htm
+++ b/index.htm
@@ -7,8 +7,8 @@
 
     <meta charset="utf-8">
     <meta name="keywords" content="high school, math, computer science, physics, Processing, Scratch">
-    <meta name="description" content="home page for Student Name">
-    <meta name="author" content="Student Name">
+    <meta name="description" content="Bailey's Home Page">
+    <meta name="author" content="Bailey">
 
     <link rel="stylesheet" href="css/style.css" type="text/css" media="all" charset="utf-8" />
 
@@ -24,8 +24,8 @@
             <!-- BEGIN your content -->
 
 
-            <h1>Student Name's Home Page</h1>
-            <p>This is my site.</p>
+            <h1>My Home Page</h1>
+            <p>This is where I'll post all my scratch projects.</p>
             <!-- END your content -->
         </div>
 
