--- a/import/include.htm
+++ b/import/include.htm
@@ -7,7 +7,7 @@
             <ul>
                 <li><a href="https://github.com/minjaman?tab=repositories">GitHub</a>
                 </li>
-                <li><a href="#">Scratch</a>
+                <li><a href="https://scratch.mit.edu/mystuff/">Scratch</a>
                 </li>
                 <li><a href="article/about.htm">About...</a>
                 </li>
