added links to space invaders and face maker

--- a/import/include.htm
+++ b/import/include.htm
@@ -26,6 +26,8 @@
                 </li>
                 <li><a href="article/pong.htm">Pong</a>
                 </li>
+                <li><a href="article/spaceinvaders.htm">Space Invaders</a>
+                </li>
             </ul>
         </li>
 
