--- a/import/include.htm
+++ b/import/include.htm
@@ -18,7 +18,11 @@
             <ul>
                 <li><a href="article/asteroids.htm">Asteroids</a>
                 </li>
-                <li><a href="article/html-tags.htm">HTML tags</a>
+                <li><a href="article/breakdown.htm">Breakdown</a>
+                </li>
+                <li><a href="article/space-invaders.htm">Space Invaders</a>
+                </li>
+                <li><a href="article/turtle-graphics.htm">Turtle Graphics</a>
                 </li>
                 <li><a href="article/facemaker.htm">Face Maker</a>
                 </li>
