added gravity page

--- a/import/include.htm
+++ b/import/include.htm
@@ -24,14 +24,13 @@
                 </li>
                 <li><a href="article/turtle-graphics.htm">Turtle Graphics</a>
                 </li>
-                <li><a href="article/facemaker.htm">Face Maker</a>
+                <li><a href="article/face-maker.htm">Face Maker</a>
                 </li>
                 <li><a href="article/gravity.htm">Gravity</a>
                 </li>
                 <li><a href="article/pong.htm">Pong</a>
                 </li>
-                <li><a href="article/spaceinvaders.htm">Space Invaders</a>
-                </li>
+
             </ul>
         </li>
 
