added turtle graphics page

--- a/article/turtle-graphics.htm
+++ b/article/turtle-graphics.htm
@@ -21,11 +21,11 @@
 
         <div id="content">
             <!-- BEGIN your content -->
-            <h1>Pong</h1>
-            <P>I created a Pong game in Scratch. To play, click on the image.</P>
+            <h1>Turtle Graphics</h1>
+            <P>I created a Drawing game in Scratch. To play, click on the image.</P>
 
             <p>
-                <a href="http://scratch.mit.edu/projects/45152732/"><img src="img/pong.png" width="480"></img>
+                <a href="http://scratch.mit.edu/projects/51697532/"><img src="img/turtle-graphics.png" width="480"></img>
                 </a>
             </p>
 
