added links to pages

--- a/article/asteroids.htm
+++ b/article/asteroids.htm
@@ -21,12 +21,12 @@
 
         <div id="content">
             <!-- BEGIN your content -->
-            <h1>Gravity</h1>
+            <h1>Asteroids</h1>
 
-            <P>I created a game to simulate gravity in Scratch. To play, click on the image.</P>
+            <P>I created an Asteroids-like game on Scratch. To play, click on the image.</P>
 
             <p>
-                <a href="http://scratch.mit.edu/projects/55239004/"><img src="img/gravity.png" width="480"></img>
+                <a href="http://scratch.mit.edu/projects/47225560/"><img src="img/asteroids.png" width="480"></img>
                 </a>
             </p>
 
