--- a/article/pong.htm
+++ b/article/pong.htm
@@ -22,10 +22,10 @@
         <div id="content">
             <!-- BEGIN your content -->
             <h1>Pong</h1>
-            <P>I created a Pong game in Scratch. To play, click on the image.</P>
+            <P>I created a Pong-like game in Scratch. To play, click on the image.</P>
 
             <p>
-                <a href="http://scratch.mit.edu/projects/47225560/"><img src="img/gravity.png" width="480"></img>
+                <a href="http://scratch.mit.edu/projects/45152732/"><img src="img/pong.png" width="480"></img>
                 </a>
             </p>
 
